# linear-regression

./: .readthedocs.yaml  LICENSE.md  OLS.py  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  intro.rst  linear_regression_ols.rst  modules.rst
src/: OLS.py  aggregation.py  confints.py  demo.py  regression.py  variable_selection.py
src/linear_regression_ols/: aggregation.py  demo.py  regression.py  variable_selection.py
