[linear-regression-ols]
name = "linear-regression-ols"
version = "0.0.1"
authors = [
  {name="Jules Lanari-Collard"},
  {name="Brendan Cao"},
  {name="Diego Urdapilleta}
]
description = "Implementation of OLS regression methods"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jules-collard/linear-regression-ols"
Issues = "https://github.com/jules-collard/linear-regression-ols/issues"
